# auto-punch

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/core/: config.py
app/routers/: punch.py
app/services/: client.py  form_logger.py  time_policy.py  time_provider.py  workflow.py
app/utils/: html_parser.py  time_parser.py
